--- a/index.html
+++ b/index.html
@@ -1,167 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalabel=1.0, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>BS NEXT</title>
+    <title>BS NEXT</title>
+    <!-- Normalize -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <!-- Roboto Font -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- Stroke Gap Icons -->
+    <link rel="stylesheet" href="css/stroke-gap-icons.css">
+    <!-- Main Styles File -->
     <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" href="img/fav.png">
-    <title>Golden</title>
+    <!-- Media Queries File -->
+    <link rel="stylesheet" href="css/media.css">
 </head>
-
 <body>
-    <header>
+    <header class="header" id="header">
         <div class="container">
-            <div class="heading clearfix">
-                <img src="img/logo.png" alt="Golden" class="logo">
-                <nav>
-                    <ul class="menu">
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li>
-                            <a href="#">Services</a>
-                        </li>
-                        <li>
-                            <a href="#">Portfolio</a>
-                        </li>
-                        <li>
-                            <a href="#">About</a>
-                        </li>
-                        <li>
-                            <a href="#">Content</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="titles">
-                <div class="titles__first">
-                    Welcome To Our Studio!
+            <nav>
+                <a href="" class="logo jpk-font">BS</a>
+                <div class="brah jpk-font">
+                    F
+                    U
+                    T
+                    U
+                    R
+                    E
                 </div>
-                <h1>
-                    It's nice to Meet you
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </nav>
+            <div class="offer">
+                <div class="offer__bg jpk-font">
+                    worth
+                </div>
+                <h1 class="offer__title jpk-font">
+                    we create<br>
+                    the bright future
                 </h1>
+                <p class="offer__text jpk-font">
+                    You can order the best website you`ve
+                    ever seen. Seriously.
+                </p>
+                <button class="offer__btn btn">
+                    contact us
+                </button>
             </div>
-            <a class="button" href="#">Tell Me More</a>
+            <div class="next jpk-font">
+                <span>n</span>
+                <span>e</span>
+                <span>x</span>
+                <span>t</span>
+            </div>
+            <a href="#services" class="scroll go_to jpk-font">
+                scroll down
+            </a>
         </div>
     </header>
-    <section id="services">
-            <div class="container">
-                <div class="title">
-                    <h2>Services</h2>
-                    <p>Proin iaculis purus consequat sem cure. </p>
-                </div>
-                <div class="services clearfix">
-                    <div class="services__item">
-                        <img src="img/icon1.png" alt="Services">
-                        <h3>E-Commerce</h3>
-                        <p>Proin iaculis purus consequat sem cure 
-                            digni ssim. Donec porttitora entum suscipit 
-                            aenean rhoncus posuere odio in tincidunt.
-                        </p>
-                    </div>
-                    <div class="services__item">
-                        <img src="img/icon2.png" alt="Response">
-                        <h3>Responsive Web</h3>
-                        <p>Proin iaculis purus consequat sem cure 
-                            digni ssim. Donec porttitora entum suscipit 
-                            aenean rhoncus posuere odio in tincidunt.
-                        </p>
-                    </div>
-                    <div class="services__item">
-                        <img src="img/icon3.png" alt="Security">
-                        <h3>Web Security</h3>
-                        <p>Proin iaculis purus consequat sem cure 
-                            digni ssim. Donec porttitora entum suscipit 
-                            aenean rhoncus posuere odio in tincidunt.
-                        </p>
-                    </div>
-                </div>
-            </div>
-    </section>
-    <section id="portfolio">
-            <div class="container">
-                    <div class="title">
-                        <h2>Our portfolio</h2>
-                        <p>Proin iaculis purus consequat sem cure. </p>
-                    </div>
-                    <div class="works clearfix">
-                        <img src="img/img1.jpg" alt="Example 1">
-                        <img src="img/img2.jpg" alt="Example 2">
-                        <img src="img/img3.jpg" alt="Example 3">
-                    </div>
-            </div>
-    </section>
-    <section id="about">
-            <div class="container">
-                <div class="title">
-                    <h2>About Us</h2>
-                    <p>Proin iaculis purus consequat sem cure. </p>
-                </div>
-                <div class="about clearfix">
-                    <div class="about__item clearfix">
-                        <div class="about__item__textl">
-                            <h3>July 2010<br>
-                                Our Humble Beginnings</h3>
-                            <p>Proin iaculis purus consequat sem cure 
-                                    digni ssim. Donec porttitora entum suscipit 
-                                    aenean rhoncus posuere odio in tincidunt. Proin 
-                                    iaculis purus consequat sem cure digni 
-                                    ssim. Donec porttitora entum suscipit.
-                            </p>
-                        </div>
-                        <img src="img/about1.jpg" alt="About 1">
-                    </div>
-                    <div class="about__item clearfix">
-                        <div class="about__item__textr">
-                            <h3>January 2011<br>
-                                Facing Startup Battles</h3>
-                            <p>Proin iaculis purus consequat sem cure 
-                                    digni ssim. Donec porttitora entum suscipit 
-                                    aenean rhoncus posuere odio in tincidunt. Proin 
-                                    iaculis purus consequat sem cure digni 
-                                    ssim. Donec porttitora entum suscipit aenean 
-                                    rhoncus posuere odio in tincidunt.
-                            </p>   
-                        </div>                   
-                        <img src="img/about2.jpg" alt="About 2">
-                    </div>
-                    <div class="about__item clearfix">
-                        <div class="about__item__textl">
-                            <h3>December 2012<br>
-                                Enter The Dark Days</h3>
-                            <p>Proin iaculis purus consequat sem cure 
-                                    digni ssim. Donec porttitora entum suscipit 
-                                    aenean rhoncus posuere odio in tincidunt. Proin 
-                                    iaculis purus consequat sem cure digni.
-                            </p>
-                        </div>
-                        <img src="img/about3.jpg" alt="About 3">
-                    </div>
-                    <div class="about__item clearfix">
-                        <div class="about__item__textr">
-                            <h3>february 2014<br>
-                                Our Triumph</h3>
-                            <p>Proin iaculis purus consequat sem cure 
-                                    digni ssim. Donec porttitora entum suscipit 
-                                    aenean rhoncus posuere odio in tincidunt. Proin 
-                                    iaculis purus consequat sem cure digni 
-                                    ssim. Donec porttitora entum suscipit aenean.
-                            </p>
-                        </div>
-                        <img src="img/about4.jpg" alt="About 4">
-                    </div>
-                </div>
-            </div>
-    </section>
-    <footer>
-        <div class="container">
-            <div class="footer">
-                <p>© Copyright 2014 FreebiesXpress.com
+    <section class="services" id="services">
+        <div class="container jpk-font">
+            <div class="section-title">
+                <p class="section-title__intro">
+                    we provide
                 </p>
+                <h2 class="section-title__title">
+                        services
+                </h2>
+            </div>
+            <div class="service">
+                <a class="service__item">
+                    <span class="service__index">
+                        01
+                    </span>
+                    <i class="service__icon icon icon-Starship">
+                    <h3 class="service__title">
+                        fast startup
+                        launch
+                    </h3>
+                    <span class="service__more">+</span>
+                    </i>
+                </a>
+                <a class="service__item">
+                    <span class="service__index">
+                            02
+                    </span>
+                    <i class="service__icon icon icon-Cup">
+                    <h3 class="service__title">
+                        awesome
+                        web design
+                    </h3>
+                    <span class="service__more">+</span>
+                    </i>
+                </a>
+                <a class="service__item">
+                    <span class="service__index">
+                            03
+                    </span>
+                    <i class="service__icon icon icon-Keyboard">
+                    <h3 class="service__title">
+                        breathtaking
+                        coding
+                    </h3>
+                    <span class="service__more">+</span>
+                    </i>
+                </a>
+                <a class="service__item">
+                    <span class="service__index">
+                        04
+                    </span>
+                    <i class="service__icon icon icon-Headset">
+                    <h3 class="service__title">
+                        up to date
+                        support
+                    </h3>
+                    <span class="service__more">+</span>
+                    </i>
+                </a>
+            </div>
+        </div>
+    </section>
+    <footer class="footer" id="footer">
+        <div class="container">
+            <div class="credits">
+                <a href="" class="logo credits__logo jpk-font">BS</a>
+                <div class="credits__rights">2019 / all rights reserved</div>
+                <button class="credits__btn btn">
+                    contact us
+                </button>
+                <div class="credits__phone">
+                    +1 8674 948 94 2
+                </div>
+                <div class="credits__mail">
+                    info@sitename.com
+                </div>
+                <div class="credits__work">
+                    Working hours: 8 am - 7 pm
+                </div>
+                <div class="credits__up"><a class="go_to icon icon-Mouse" href="#header"></a></div>
             </div>
         </div>
     </footer>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
