--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/main.css">
     <!-- Media Queries File -->
     <link rel="stylesheet" href="css/media.css">
+    <link rel="icon" href="img/fav.png">
 </head>
 <body>
     <header class="header" id="header">
